Moved Cheat Sheets from Core to Doc plug-in, deleted German content

--- a/sourceediting/documentation/org.eclipse.wst.xml.security.doc/plugin.properties
+++ b/sourceediting/documentation/org.eclipse.wst.xml.security.doc/plugin.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2008 Dominik Schadow - http://www.xml-sicherheit.de
+# Copyright (c) 2009 Dominik Schadow - http://www.xml-sicherheit.de
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -10,3 +10,14 @@
 ###############################################################################
 bundleName=XML Security Tools Doc (Incubating)
 bundleProvider=Eclipse.org
+decryptionCheatSheet=XML Decryption
+decryptionCheatSheetDescription=This tutorial shows you how to decrypt an XML document.
+signatureCheatSheet=XML Signature
+signatureCheatSheetDescription=This tutorial shows you how to sign an XML document.
+encryptionCheatSheet=XML Encryption
+encryptionCheatSheetDescription=This tutorial shows you how to encrypt an XML document.
+verificationCheatSheet=XML Verification
+verificationCheatSheetDescription=This tutorial shows you how to verify an XML Signature.
+xmlSecurityCheatSheet=XML Security
+quickFunctionsCheatSheet=XML Quick...
+quickFunctionsCheatSheetDescription=This tutorial shows you how to use the different Quick Functions of the XML Security Tools.
