--- a/sourceediting/documentation/org.eclipse.wst.xml.security.doc/plugin.xml
+++ b/sourceediting/documentation/org.eclipse.wst.xml.security.doc/plugin.xml
@@ -16,4 +16,56 @@
          point="org.eclipse.help.contexts">
       <contexts file="contexts.xml"/>
    </extension>
+   <extension
+         point="org.eclipse.ui.cheatsheets.cheatSheetContent">
+      <category
+            id="org.eclipse.wst.xml.security.core.cheatsheets.category"
+            name="%xmlSecurityCheatSheet">
+      </category>
+      <cheatsheet
+            category="org.eclipse.wst.xml.security.core.cheatsheets.category"
+            contentFile="cheatsheets/sign.xml"
+            id="org.eclipse.wst.xml.security.core.cheatsheets.sign"
+            name="%signatureCheatSheet">
+         <description>
+            %signatureCheatSheetDescription
+         </description>
+      </cheatsheet>
+      <cheatsheet
+            category="org.eclipse.wst.xml.security.core.cheatsheets.category"
+            contentFile="cheatsheets/verify.xml"
+            id="org.eclipse.wst.xml.security.core.cheatsheets.verify"
+            name="%verificationCheatSheet">
+         <description>
+            %verificationCheatSheetDescription
+         </description>
+      </cheatsheet>
+      <cheatsheet
+            category="org.eclipse.wst.xml.security.core.cheatsheets.category"
+            contentFile="cheatsheets/encrypt.xml"
+            id="org.eclipse.wst.xml.security.core.cheatsheets.encrypt"
+            name="%encryptionCheatSheet">
+         <description>
+            %encryptionCheatSheetDescription
+         </description>
+      </cheatsheet>
+      <cheatsheet
+            category="org.eclipse.wst.xml.security.core.cheatsheets.category"
+            contentFile="cheatsheets/decrypt.xml"
+            id="org.eclipse.wst.xml.security.core.cheatsheets.decrypt"
+            name="%decryptionCheatSheet">
+         <description>
+            %decryptionCheatSheetDescription
+         </description>
+      </cheatsheet>
+      <cheatsheet
+            category="org.eclipse.wst.xml.security.core.cheatsheets.category"
+            contentFile="cheatsheets/quick.xml"
+            id="org.eclipse.wst.xml.security.core.cheatsheets.quick"
+            name="%quickFunctionsCheatSheet">
+         <description>
+            %quickFunctionsCheatSheetDescription
+         </description>
+      </cheatsheet>
+   </extension>
 </plugin>
