--- a/sourceediting/documentation/org.eclipse.wst.xml.security.doc/build.properties
+++ b/sourceediting/documentation/org.eclipse.wst.xml.security.doc/build.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2008 Dominik Schadow - http://www.xml-sicherheit.de
+# Copyright (c) 2009 Dominik Schadow - http://www.xml-sicherheit.de
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -15,4 +15,5 @@ bin.includes = META-INF/,\
                *.html,\
                plugin.properties,\
                images/,\
-               tasks/
+               tasks/,\
+               cheatsheets/
