Started Eclipse Wiki based online help for XML Security Tools

--- a/sourceediting/documentation/org.eclipse.wst.xml.security.doc/build.properties
+++ b/sourceediting/documentation/org.eclipse.wst.xml.security.doc/build.properties
@@ -9,11 +9,10 @@
 #     Dominik Schadow - initial API and implementation
 ###############################################################################
 bin.includes = META-INF/,\
-               setup/,\
                *.css,\
                *.xml,\
                *.html,\
                plugin.properties,\
                images/,\
-               tasks/,\
-               cheatsheets/
+               cheatsheets/,\
+               html/
