--- a/sourceediting/plugins/org.eclipse.wst.xml.vex.core/.settings/org.eclipse.core.resources.prefs
+++ b/sourceediting/plugins/org.eclipse.wst.xml.vex.core/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
-#Wed Nov 12 20:38:06 GMT 2008
+#Sun Nov 01 00:53:25 GMT 2009
 eclipse.preferences.version=1
 encoding//emf/dom1.ecorediag=UTF-8
+encoding/<project>=UTF-8
