bug 252628, bug 251488: - Actions converted to command handlers - Document and context menu contributed via "org.eclipse.ui.menus" (see bug 251488) - Enablement/visibility declaratively managed by "org.eclipse.ui.services" - Naming and placing of menu items aligned with Eclipse UI convention (e.g. in contrast to documents/files which are created with 'New...' and deleted with 'Delete' smaller parts are "Add"ed and "Remove"d; Document and context menu rearranged) - Refactoring to avoid duplicated code (e.g. by introducing some abstract handlers)

--- a/sourceediting/plugins/org.eclipse.wst.xml.vex.ui/plugin.properties
+++ b/sourceediting/plugins/org.eclipse.wst.xml.vex.ui/plugin.properties
@@ -2,7 +2,8 @@
 # Language-specific strings in plugin.xml
 #
 
-plugin.name=Vex XML Editor
+pluginName= Vex XML Editor
+providerName= Eclipse Web Tools Platform (WTP) Incubator Project
 
 BuildProblemDecorator.name=Vex Plug-in Build Problem Decorator
 ConfigurationView.name=Vex Configuration
@@ -20,54 +21,60 @@ PluginProjectNature.name=Vex Plugin Project Nature
 StylePropertyPage.name=Vex Style
 VexCommandCategory.name=Vex XML Editor
 VexEditor.name=Vex XML Editor
-VexEditor.multipage.name=VEX Multipage XML Editor
+VexEditor.multipage.name=Vex Multipage XML Editor
 VexEditorContext.name=Editing XML Documents
 VexViewCategory.name=Vex
 
 extensionPoint.doctypes=Vex Document Types
 extensionPoint.styles=Vex Styles
 
-documentActions.label=XML Editing Actions
+command.category.name= Vex - Visual Editor for XML 
+command.addElement.name= Add Element...
+command.duplicateSelection.name= &Duplicate Selection
+command.convertElement.name= Convert Element To...
+# dynamic names for 'Remove Tag' see org.eclipse.wst.xml.vex.ui.internal.editor.messages.properties
+command.removeTag.name= Remove Tag
+# dynamic names for 'Remove Tag' see org.eclipse.wst.xml.vex.ui.internal.editor.messages.properties
+command.addRowAbove.name= Add Row Above
+command.addRowBelow.name= Add Row Below
+command.moveRowUp.name= Move Row Up
+command.moveRowDown.name= Move Row Down
+command.removeRow.name= Remove Row
+command.addColumnLeft.name= Add Column to the Left
+command.addColumnRight.name= Add Column to the Right
+command.moveColumnLeft.name= Move Column Left
+command.moveColumnRight.name= Move Column Right
+command.removeColumn.name= Remove Column
+command.previousTableCell.name= Previous Table Cell
+command.nextTableCell.name= Next Table Cell
+command.splitBlockElement.name= Split Block Element
+command.splitItem.name= Split Item
 
-documentMenu.label=&Document
-insertMenu.label=&Insert
-rowMenu.label=&Row
-columnMenu.label=&Column
-
-#
-# Actions
-#
-# NOTE: THESE MUST BE KEPT IN SYNC WITH THE SAME BLOCK IN 
-#       src/net/sf/vex/editor/messages.properties
-#
-# Note: when there are multiple labels for an action, the one named
-# Xxx.label is the command listed in the key bindings preference page.
-#
-ChangeElementAction.label=Change Element
-ChangeElementAction.menu.label=&Change Element...
-DeleteColumnAction.label=Delete Column
-DeleteRowAction.label=Delete Row
-DuplicateSelectionAction.label=&Duplicate Selection
-InsertColumnAfterAction.label=Insert Column After
-InsertColumnBeforeAction.label=Insert Column Before
-InsertElementAction.label=Insert Element
-InsertElementAction.mainmenu.label=&Element...
-InsertRowAboveAction.label=Insert Row Above
-InsertRowBelowAction.label=Insert Row Below
-MoveColumnLeftAction.label=Move Column Left
-MoveColumnRightAction.label=Move Column Right
-MoveRowDownAction.label=Move Row Down
-MoveRowUpAction.label=Move Row Up
-NextTableCellAction.label=Next Table Cell
-PasteTextAction.label=Paste Text
-PreviousTableCellAction.label=Previous Table Cell
-RemoveElementAction.label=Remove Element
-RestoreLastSelectionAction.label=Restore Last Selection
-SplitAction.label=Split Block Element
-SplitItemAction.label=Split Item
-
-#
-# End of Actions
-#
-
-Bundle-Vendor.0 = vex.sf.net
+menu.Document.name= &Document
+menu.Add.name= &Add
+menu.Add.Element.name= &Element...
+menu.Add.RowAbove.name= Row &Above
+menu.Add.RowBelow.name= Row &Below
+menu.Add.ColumnLeft.name= Column to the &Left
+menu.Add.ColumnRight.name= Column to the &Right
+menu.Move.name= &Move
+menu.Move.RowUp= Row &Up
+menu.Move.RowDown= Row &Down
+menu.Move.ColumnLeft= Column &Left
+menu.Move.ColumnRight= Column &Right
+menu.Remove.name= &Remove
+menu.Remove.Row.name= &Row
+menu.Remove.Column.name= &Column
+menu.Row.name= Row
+menu.Row.AddAbove.name= Add Above
+menu.Row.AddBelow.name= Add Below
+menu.Row.MoveUp.name= Move Up
+menu.Row.MoveDown.name= Move Down
+menu.Row.Remove.name= Remove
+menu.Column.name= Column
+menu.Column.AddLeft.name= Add to the Left
+menu.Column.AddRight.name= Add to the Right
+menu.Column.MoveLeft.name= Move Left
+menu.Column.MoveRight.name= Move Right
+menu.Column.Remove.name= Remove
+menu.Style.name= Style
