298211 There's no source in xmlsec sdk plus fixed 'providerName'

--- a/sourceediting/features/org.eclipse.wst.xml.security_sdk.feature/feature.properties
+++ b/sourceediting/features/org.eclipse.wst.xml.security_sdk.feature/feature.properties
@@ -10,7 +10,7 @@
 ###############################################################################
 featureName=XML Security Tools SDK Feature (Incubating)
 
-providerName=Eclipse.org
+providerName=Eclipse Web Tools Platform
 
 description = XML Security Tools SDK Feature
 
