--- a/sourceediting/features/org.eclipse.wst.xml.security_tests.feature/feature.properties
+++ b/sourceediting/features/org.eclipse.wst.xml.security_tests.feature/feature.properties
@@ -10,7 +10,7 @@
 ###############################################################################
 featureName=XML Security Tools Tests Feature (Incubating)
 
-providerName=Eclipse.org
+providerName=Eclipse Web Tools Platform
 
 description = XML Security Tools Tests Feature
 
