--- a/sourceediting/documentation/org.eclipse.wst.xml.security.doc/build.properties
+++ b/sourceediting/documentation/org.eclipse.wst.xml.security.doc/build.properties
@@ -15,3 +15,4 @@ bin.includes = META-INF/,\
                plugin.properties,\
                cheatsheets/,\
                html/
+generateSourceBundle=false
