Externalized Strings from plugin.xml

--- a/sourceediting/documentation/org.eclipse.wst.xml.security.doc/plugin.properties
+++ b/sourceediting/documentation/org.eclipse.wst.xml.security.doc/plugin.properties
@@ -21,3 +21,4 @@ verificationCheatSheetDescription=This tutorial shows you how to verify an XML S
 xmlSecurityCheatSheet=XML Security
 quickFunctionsCheatSheet=XML Quick...
 quickFunctionsCheatSheetDescription=This tutorial shows you how to use the different Quick Functions of the XML Security Tools.
+extension.name = org.eclipse.wst.xml.security.doc.context
