fix for junit test failures.

--- a/sourceediting/plugins/org.eclipse.wst.xml.vex.docbook/build.properties
+++ b/sourceediting/plugins/org.eclipse.wst.xml.vex.docbook/build.properties
@@ -6,8 +6,7 @@ bin.includes = plugin.xml,\
                4.5/,\
                bin/
                
-src.includes = plugin.xml,\
-               styles/,\
+src.includes = styles/,\
                4.5/
 source.. = src/
 jars.compile.order = .
