--- a/sourceediting/plugins/org.eclipse.wst.xml.vex.core/build.properties
+++ b/sourceediting/plugins/org.eclipse.wst.xml.vex.core/build.properties
@@ -3,11 +3,8 @@ bin.includes = plugin.properties,\
                .,\
                lib/,\
                lib/flute.jar,\
-               bin/,\
-               plugin.xml
-src.includes = lib/,\
-               src-emf/,\
-               src/
+               bin/
+src.includes = lib/
 source.. = src/,\
            src-emf/
 der = .
