--- a/sourceediting/development/org.eclipse.wst.xml.vex.releng/build.properties
+++ b/sourceediting/development/org.eclipse.wst.xml.vex.releng/build.properties
@@ -12,7 +12,7 @@ incubation=-Incubation
 version=0.5.0
 buildType=N
 mainFeatureToBuildID=org.eclipse.wst.xml.vex.feature
-#testFeatureToBuildID=org.eclipse.wst.xml.xpath2.processor_tests.feature
+testFeatureToBuildID=org.eclipse.wst.xml.vex_tests.feature
 
 # MUST BE SET #
 JAVA_HOME=/opt/public/common/ibm-java2-ppc-50
