--- a/sourceediting/development/org.eclipse.wst.xml.vex.releng/testing.properties
+++ b/sourceediting/development/org.eclipse.wst.xml.vex.releng/testing.properties
@@ -1,6 +1,6 @@
 #csv list of test plugins to run
-#testPluginsToRun=org.eclipse.wst.xml.xpath2.processor.tests
+testPluginsToRun=org.eclipse.wst.xml.vex.tests
 #,org.eclipse.zest.tests # need an aggregate test suite first!
 
 #map name of test plugin to testsuite class to run
-#org.eclipse.wst.xml.xpath2.processor.tests.suite=org.eclipse.wst.xml.xpath2.processor.test.AllPsychoPathTests
+org.eclipse.wst.xml.vex.tests.suite=org.eclipse.wst.xml.vex.tests.AllTestSuite
