[297277] Need CI build for Vex

--- a/sourceediting/development/org.eclipse.wst.xml.vex.releng/build.properties
+++ b/sourceediting/development/org.eclipse.wst.xml.vex.releng/build.properties
@@ -25,7 +25,7 @@ featureIDsToInstall=org.eclipse.wst.xml_ui.feature
 
 #what steps should we do? default: build.steps=buildUpdate,buildZips,buildTests,generateDigests,test,publish,cleanup
 #build.steps=buildUpdate,buildZips,buildTests,generateDigests,test,publish,cleanup
-build.steps=buildUpdate,buildZips,map2psf,generateDigests,publish,cleanup
+build.steps=buildUpdate,buildZips,buildTests,map2psf,generateDigests,test,publish,cleanup
 
 compilerArg=-enableJavadoc -encoding ISO-8859-1
 flattenDependencies=true
