--- a/sourceediting/development/org.eclipse.wst.xml.vex.releng/testing.properties
+++ b/sourceediting/development/org.eclipse.wst.xml.vex.releng/testing.properties
@@ -4,3 +4,4 @@ testPluginsToRun=org.eclipse.wst.xml.vex.tests
 
 #map name of test plugin to testsuite class to run
 org.eclipse.wst.xml.vex.tests.suite=org.eclipse.wst.xml.vex.tests.AllTestSuite
+extraVMargs=-Dorg.eclipse.swt.browser.XULRunnerPath=/shared/common/mozilla-xulrunner181-1.8.1.4-30.ppc
