--- a/sourceediting/development/org.eclipse.wst.xml.vex.releng/build.properties
+++ b/sourceediting/development/org.eclipse.wst.xml.vex.releng/build.properties
@@ -17,7 +17,6 @@ testFeatureToBuildID=org.eclipse.wst.xml.vex_tests.feature
 # MUST BE SET #
 JAVA_HOME=/opt/public/common/ibm-java2-ppc-50
 JAVA50_HOME=/opt/public/common/ibm-java2-ppc-50
-#dependencyURLs=http://download.eclipse.org/eclipse/downloads/drops/R-3.5-200906111540/eclipse-SDK-3.5-linux-gtk-ppc.tar.gz,http://download.eclipse.org/tools/orbit/downloads/drops/R20090825191606/orbit-R20090825191606.zip,http://download.eclipse.org/webtools/downloads/drops/R3.1/R-3.1.1-20090917225226/wtp-common-fproj-sdk-R-3.1.1-20090917225226.zip,http://www.starstandard.org/download/org.antlr.runtime_v31.zip
 dependencyURLs=http://download.eclipse.org/eclipse/downloads/drops/R-3.5-200906111540/eclipse-SDK-3.5-linux-gtk-ppc.tar.gz,http://download.eclipse.org/tools/orbit/downloads/drops/R20090825191606/orbit-R20090825191606.zip,http://download.eclipse.org/eclipse/downloads/drops/R-3.5.1-200909170800/eclipse-test-framework-3.5.1.zip
 repositoryURLs=http://download.eclipse.org/releases/galileo
 featureIDsToInstall=org.eclipse.wst.xml_ui.feature
@@ -25,7 +24,7 @@ featureIDsToInstall=org.eclipse.wst.xml_ui.feature
 
 #what steps should we do? default: build.steps=buildUpdate,buildZips,buildTests,generateDigests,test,publish,cleanup
 #build.steps=buildUpdate,buildZips,buildTests,generateDigests,test,publish,cleanup
-build.steps=buildUpdate,buildZips,buildTests,map2psf,generateDigests,test,publish,cleanup
+build.steps=buildUpdate,buildZips,map2psf,buildTests,generateDigests,test,publish
 
 compilerArg=-enableJavadoc -encoding ISO-8859-1
 flattenDependencies=true
