[297277] Need CI build for Vex

--- a/sourceediting/development/org.eclipse.wst.xml.vex.releng/testing.properties
+++ b/sourceediting/development/org.eclipse.wst.xml.vex.releng/testing.properties
@@ -3,5 +3,5 @@ testPluginsToRun=org.eclipse.wst.xml.vex.tests
 #,org.eclipse.zest.tests # need an aggregate test suite first!
 
 #map name of test plugin to testsuite class to run
-org.eclipse.wst.xml.vex.tests.suite=org.eclipse.wst.xml.vex.tests.AllTestSuite
+org.eclipse.wst.xml.vex.tests.suite=org.eclipse.wst.xml.vex.tests.AllTestsSuite
 extraVMargs=-Dorg.eclipse.swt.browser.XULRunnerPath=/shared/common/mozilla-xulrunner181-1.8.1.4-30.ppc
