--- a/sourceediting/development/org.eclipse.wst.xml.vex.releng/testing.properties
+++ b/sourceediting/development/org.eclipse.wst.xml.vex.releng/testing.properties
@@ -1,7 +1,7 @@
 #csv list of test plugins to run
-testPluginsToRun=org.eclipse.wst.xml.vex.tests
+testPluginsToRun=org.eclipse.wst.xml.vex.core.tests
 #,org.eclipse.zest.tests # need an aggregate test suite first!
 
 #map name of test plugin to testsuite class to run
-org.eclipse.wst.xml.vex.tests.suite=org.eclipse.wst.xml.vex.tests.AllTestsSuite
+org.eclipse.wst.xml.vex.core.tests.suite=org.eclipse.wst.xml.vex.core.tests.VEXCoreTestSuite
 extraVMargs=-Dorg.eclipse.swt.browser.XULRunnerPath=/shared/common/mozilla-xulrunner181-1.8.1.4-30.ppc
