--- a/sourceediting/development/org.eclipse.wst.xml.vex.releng/build.properties
+++ b/sourceediting/development/org.eclipse.wst.xml.vex.releng/build.properties
@@ -17,7 +17,7 @@ testFeatureToBuildID=org.eclipse.wst.xml.vex_tests.feature
 # MUST BE SET #
 JAVA_HOME=/opt/public/common/ibm-java2-ppc-50
 JAVA50_HOME=/opt/public/common/ibm-java2-ppc-50
-dependencyURLs=http://download.eclipse.org/eclipse/downloads/drops/R-3.5-200906111540/eclipse-SDK-3.5-linux-gtk-ppc.tar.gz,http://download.eclipse.org/tools/orbit/downloads/drops/R20090825191606/orbit-R20090825191606.zip,http://download.eclipse.org/eclipse/downloads/drops/R-3.5.1-200909170800/eclipse-test-framework-3.5.1.zip
+dependencyURLs=http://download.eclipse.org/eclipse/downloads/drops/R-3.5-200906111540/eclipse-SDK-3.5-linux-gtk-ppc.tar.gz,http://download.eclipse.org/tools/orbit/downloads/drops/R20090825191606/orbit-R20090825191606.zip
 repositoryURLs=http://download.eclipse.org/releases/galileo
 featureIDsToInstall=org.eclipse.wst.xml_ui.feature
 
