--- a/sourceediting/plugins/org.eclipse.wst.xml.vex.dita/plugin.properties
+++ b/sourceediting/plugins/org.eclipse.wst.xml.vex.dita/plugin.properties
@@ -1,3 +1,15 @@
+###############################################################################
+# Copyright (c) 2009 John Krasnay and others.
+# All rights reserved. This program and the accompanying materials
+# are made available under the terms of the Eclipse Public License v1.0
+# which accompanies this distribution, and is available at
+# http://www.eclipse.org/legal/epl-v10.html
+#
+# Contributors:
+#     John Krasnay - initial API and implementation
+###############################################################################
+pluginName= Vex DITA
+providerName= Eclipse.org
 
 doctype.concept=DITA Concept
 doctype.composite=DITA Composite
@@ -8,5 +20,3 @@ doctype.map=DITA Map
 
 style.classed=DITA Classed
 style.mapStyle=DITA Map
-plugin.name = VEX DITA (Incubator)
-providerName = Eclipse.org
