--- a/sourceediting/plugins/org.eclipse.wst.xml.vex.docbook/plugin.properties
+++ b/sourceediting/plugins/org.eclipse.wst.xml.vex.docbook/plugin.properties
@@ -1,5 +1,15 @@
-plugin.name = VEX DocBook Plug-in (Incubating)
-providerName = Eclipse.org
+###############################################################################
+# Copyright (c) 2009 John Krasnay and others.
+# All rights reserved. This program and the accompanying materials
+# are made available under the terms of the Eclipse Public License v1.0
+# which accompanies this distribution, and is available at
+# http://www.eclipse.org/legal/epl-v10.html
+#
+# Contributors:
+#     John Krasnay - initial API and implementation
+###############################################################################
+pluginName= Vex DocBook
+providerName= Eclipse.org
 
 doctype.docbook4_5=DocBook v4.5
 
