--- a/sourceediting/plugins/org.eclipse.wst.xml.vex.ui/plugin.properties
+++ b/sourceediting/plugins/org.eclipse.wst.xml.vex.ui/plugin.properties
@@ -1,9 +1,15 @@
+###############################################################################
+# Copyright (c) 2009 John Krasnay and others.
+# All rights reserved. This program and the accompanying materials
+# are made available under the terms of the Eclipse Public License v1.0
+# which accompanies this distribution, and is available at
+# http://www.eclipse.org/legal/epl-v10.html
 #
-# Language-specific strings in plugin.xml
-#
-
-pluginName= Vex XML Editor
-providerName= Eclipse Web Tools Platform (WTP) Incubator Project
+# Contributors:
+#     John Krasnay - initial API and implementation
+###############################################################################
+pluginName= Vex UI
+providerName= Eclipse.org
 
 BuildProblemDecorator.name=Vex Plug-in Build Problem Decorator
 ConfigurationView.name=Vex Configuration
