--- a/sourceediting/plugins/org.eclipse.wst.xml.vex/plugin.properties
+++ b/sourceediting/plugins/org.eclipse.wst.xml.vex/plugin.properties
@@ -1,3 +1,12 @@
-#Properties file for org.eclipse.wst.xml.vex
-Bundle-Vendor.0 = Eclipse.org
-Bundle-Name.0 = WTP VEX (Incubating)
+###############################################################################
+# Copyright (c) 2009 John Krasnay and others.
+# All rights reserved. This program and the accompanying materials
+# are made available under the terms of the Eclipse Public License v1.0
+# which accompanies this distribution, and is available at
+# http://www.eclipse.org/legal/epl-v10.html
+#
+# Contributors:
+#     John Krasnay - initial API and implementation
+###############################################################################
+pluginName= Vex
+providerName= Eclipse.org
