--- a/sourceediting/tests/org.eclipse.wst.xml.vex.tests/plugin.properties
+++ b/sourceediting/tests/org.eclipse.wst.xml.vex.tests/plugin.properties
@@ -1,13 +1,12 @@
 ###############################################################################
-# Copyright (c) 2008 Standards for Technology in Automotive Retail and others.
+# Copyright (c) 2009 David Carver and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
 # http://www.eclipse.org/legal/epl-v10.html
 #
 # Contributors:
-#     David Carver (STAR) - initial API and implementation
+#     David Carver - initial API and implementation
 ###############################################################################
-#Properties file for org.eclipse.wst.xml.vex.tests
-Bundle-Name.0 = VEX Tests Plug-in
-Bundle-Vendor.0 = Eclipse.org
+pluginName= Vex Tests
+providerName= Eclipse.org
