--- a/sourceediting/development/org.eclipse.wst.xml.vex.releng/build.properties
+++ b/sourceediting/development/org.eclipse.wst.xml.vex.releng/build.properties
@@ -12,7 +12,7 @@ incubation=-Incubation
 version=0.5.0
 buildType=N
 mainFeatureToBuildID=org.eclipse.wst.xml.vex.feature
-#testFeatureToBuildID=org.eclipse.wst.xml.vex_tests.feature
+testFeatureToBuildID=org.eclipse.wst.xml.vex_tests.feature
 
 # MUST BE SET #
 JAVA_HOME=/opt/public/common/ibm-java2-ppc-50
@@ -24,7 +24,7 @@ featureIDsToInstall=org.eclipse.wst.xml_ui.feature
 
 #what steps should we do? default: build.steps=buildUpdate,buildZips,buildTests,generateDigests,test,publish,cleanup
 #build.steps=buildUpdate,buildZips,buildTests,generateDigests,test,publish,cleanup
-build.steps=buildUpdate,buildZips,map2psf,generateDigests,publish
+build.steps=buildUpdate,buildZips,buildTests,generateDigests,test,map2psf,publish
 
 compilerArg=-enableJavadoc -encoding ISO-8859-1
 flattenDependencies=true
