--- a/sourceediting/development/org.eclipse.wst.xml.vex.releng/build.properties
+++ b/sourceediting/development/org.eclipse.wst.xml.vex.releng/build.properties
@@ -24,7 +24,7 @@ featureIDsToInstall=org.eclipse.wst.xml_ui.feature
 
 #what steps should we do? default: build.steps=buildUpdate,buildZips,buildTests,generateDigests,test,publish,cleanup
 #build.steps=buildUpdate,buildZips,buildTests,generateDigests,test,publish,cleanup
-build.steps=buildUpdate,buildZips,buildTests,generateDigests,test,map2psf,publish
+build.steps=buildUpdate,buildZips,buildTests,generateDigests,testLocal,map2psf,publish
 
 compilerArg=-enableJavadoc -encoding ISO-8859-1
 flattenDependencies=true
