--- a/sourceediting/plugins/org.eclipse.wst.xml.vex.dita/plugin.properties
+++ b/sourceediting/plugins/org.eclipse.wst.xml.vex.dita/plugin.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2009 John Krasnay and others.
+# Copyright (c) 2009, 2010 John Krasnay and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -7,6 +7,7 @@
 #
 # Contributors:
 #     John Krasnay - initial API and implementation
+#     Igor Jacy Lino Campista - bug 251954 - content types for DITA file extensions
 ###############################################################################
 pluginName= Vex DITA
 providerName= Eclipse.org
@@ -20,3 +21,8 @@ doctype.map=DITA Map
 
 style.classed=DITA Classed
 style.mapStyle=DITA Map
+
+contentType.name = DITA Content Type
+contentType.map.name = DITA Map Content Type
+contentType.ditaval.name = DITAVal Content Type
+contentType.topic.name = DITA Topic Content Type
