test for VEX on slave machine

--- a/sourceediting/development/org.eclipse.wst.xml.vex.releng/build.properties
+++ b/sourceediting/development/org.eclipse.wst.xml.vex.releng/build.properties
@@ -15,9 +15,8 @@ mainFeatureToBuildID=org.eclipse.wst.xml.vex.feature
 testFeatureToBuildID=org.eclipse.wst.xml.vex_tests.feature
 
 # MUST BE SET #
-JAVA_HOME=/opt/public/common/ibm-java2-ppc-50
-JAVA50_HOME=/opt/public/common/ibm-java2-ppc-50
-dependencyURLs=http://download.eclipse.org/eclipse/downloads/drops/R-3.5-200906111540/eclipse-SDK-3.5-linux-gtk-ppc.tar.gz,http://download.eclipse.org/tools/orbit/downloads/drops/R20090825191606/orbit-R20090825191606.zip
+JAVA50_HOME=${JAVA_HOME}
+dependencyURLs=http://download.eclipse.org/eclipse/downloads/drops/R-3.5-200906111540/eclipse-SDK-3.5-linux-gtk-x86-64.tar.gz,http://download.eclipse.org/tools/orbit/downloads/drops/R20090825191606/orbit-R20090825191606.zip
 repositoryURLs=http://download.eclipse.org/releases/galileo
 featureIDsToInstall=org.eclipse.wst.xml_ui.feature
 
