--- a/sourceediting/development/org.eclipse.wst.xml.vex.releng/build.properties
+++ b/sourceediting/development/org.eclipse.wst.xml.vex.releng/build.properties
@@ -15,9 +15,10 @@ mainFeatureToBuildID=org.eclipse.wst.xml.vex.feature
 testFeatureToBuildID=org.eclipse.wst.xml.vex_tests.feature
 
 # MUST BE SET #
-JAVA50_HOME=${JAVA_HOME}
-dependencyURLs=http://download.eclipse.org/eclipse/downloads/drops/R-3.5-200906111540/eclipse-SDK-3.5-linux-gtk-x86_64.tar.gz,http://download.eclipse.org/tools/orbit/downloads/drops/R20090825191606/orbit-R20090825191606.zip
-repositoryURLs=http://download.eclipse.org/webtools/downloads/drops/R3.1.2/R-3.1.2-20100211202452/repos/wst-sdk-buildrepo-R-3.1.2-20100211202452.zip,http://download.eclipse.org/modeling/emf/emf/downloads/drops/2.5.0/R200906151043/emf-xsd-Update-2.5.0.zip,http://download.eclipse.org/releases/galileo
+JAVA_HOME=/opt/public/common/ibm-java2-ppc-50
+JAVA50_HOME=/opt/public/common/ibm-java2-ppc-50
+dependencyURLs=http://download.eclipse.org/eclipse/downloads/drops/R-3.5-200906111540/eclipse-SDK-3.5-linux-gtk-ppc.tar.gz,http://download.eclipse.org/tools/orbit/downloads/drops/R20090825191606/orbit-R20090825191606.zip
+repositoryURLs=http://download.eclipse.org/releases/galileo
 featureIDsToInstall=org.eclipse.wst.xml_ui.feature
 
 
