bug 311140: new category "XML Authoring" for the new wizards

--- a/sourceediting/plugins/org.eclipse.wst.xml.vex.ui/plugin.properties
+++ b/sourceediting/plugins/org.eclipse.wst.xml.vex.ui/plugin.properties
@@ -7,6 +7,7 @@
 #
 # Contributors:
 #     John Krasnay - initial API and implementation
+#	  Igor Jacy Lino Campista - bug 311140 - new category XML Authoring for new wizards
 ###############################################################################
 pluginName= Vex UI
 providerName= Eclipse.org
@@ -20,7 +21,7 @@ NewDocumentWizard.name=Document
 NewDocumentWizard.desc=Create an XML document using the Vex editor.
 NewPluginProjectWizard.name=Vex Plug-in Project
 NewPluginProjectWizard.desc=Create a new Vex Plug-in project.
-NewWizardCategory.name=Vex
+NewWizardCategory.name=XML Authoring
 PluginProjectBuilder.name=Vex Plug-in Builder
 PluginProjectDecorator.name=Vex Plug-in Project Decorator
 PluginProjectNature.name=Vex Plugin Project Nature
