add findbugs and duplicate code checker.

--- a/sourceediting/development/org.eclipse.wst.xml.vex.releng/build.xml
+++ b/sourceediting/development/org.eclipse.wst.xml.vex.releng/build.xml
@@ -73,9 +73,9 @@
 		<!-- <ant antfile="${relengCommonBuilderDir}/buildAll.xml" target="runEclipse" dir="${relengCommonBuilderDir}" />-->
 		<ant antfile="${relengCommonBuilderDir}/build.xml" />
 
-<!--		<antcall target="findbugs" inheritall="true" /> -->
+		<antcall target="findbugs" inheritall="true" />
 		<cleanUpBuild />
-<!--		<antcall target="duplicateCode" inheritall="true" /> -->
+		<antcall target="duplicateCode" inheritall="true" />
 	</target>
 
 	<macrodef name="cleanUpBuild">
