--- a/sourceediting/development/org.eclipse.wst.xml.vex.releng/build.properties
+++ b/sourceediting/development/org.eclipse.wst.xml.vex.releng/build.properties
@@ -16,9 +16,9 @@ testFeatureToBuildID=org.eclipse.wst.xml.vex_tests.feature
 
 # MUST BE SET #
 JAVA50_HOME=${JAVA_HOME}
-dependencyURLs=http://download.eclipse.org/eclipse/downloads/drops/R-3.5-200906111540/eclipse-SDK-3.5-linux-gtk-ppc.tar.gz,http://download.eclipse.org/tools/orbit/downloads/drops/R20090825191606/orbit-R20090825191606.zip
+dependencyURLs=http://download.eclipse.org/tools/orbit/downloads/drops/R20090825191606/orbit-R20090825191606.zip
 repositoryURLs=http://download.eclipse.org/releases/galileo
-featureIDsToInstall=org.eclipse.wst.xml_ui.feature
+featureIDsToInstall=org.eclipse.sdk.ide,org.eclipse.wst.xml_ui.feature
 
 
 #what steps should we do? default: build.steps=buildUpdate,buildZips,buildTests,generateDigests,test,publish,cleanup
