use p2 installable sdk for platform.

--- a/sourceediting/development/org.eclipse.wst.xml.vex.releng/build.properties
+++ b/sourceediting/development/org.eclipse.wst.xml.vex.releng/build.properties
@@ -18,8 +18,8 @@ testFeatureToBuildID=org.eclipse.wst.xml.vex_tests.feature
 JAVA50_HOME=${JAVA_HOME}
 dependencyURLs=http://download.eclipse.org/tools/orbit/downloads/drops/R20090825191606/orbit-R20090825191606.zip
 repositoryURLs=http://download.eclipse.org/releases/galileo
-featureIDsToInstall=org.eclipse.wst.xml_ui.feature
-IUsToInstall=org.eclipse.sdk.feature.group
+featureIDsToInstall=org.eclipse.sdk.feature,org.eclipse.wst.xml_ui.feature
+
 
 
 #what steps should we do? default: build.steps=buildUpdate,buildZips,buildTests,generateDigests,test,publish,cleanup
